5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1834_2604.log
== SUBMITION (2019-07-09 01:16:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(imput("Digite: ")))
for i in range(shape(a)[0]):
	print(max(a[i,:]))
-- EXECUTION TIME:
0.976146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 3, in <module>
    a = array(eval(imput("Digite: ")))
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 01:17:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(imput("Digite: ")))
for i in range(shape(a)[0]):
	print(max(a[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 01:17:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("Digite: ")))
for i in range(shape(a)[0]):
	print(max(a[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 01:17:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("Digite: ")))
for i in range(shape(a)[0]):
	print(max(a[i,:]))
-- EXECUTION TIME:
1.18742
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
